--- a/Auth/signin/signin.css
+++ b/Auth/signin/signin.css
@@ -55,6 +55,7 @@ header {
     background-color: var(--header-background-color);
     padding: 10px;
     width: 100%;
+    max-width: 100%;
 }
 header h1 {
     margin-top: 1.2vh;
@@ -125,6 +126,7 @@ footer {
     display: inline-flex;
     margin-bottom: 0%;
     width: 100%;
+    max-width: 100%;
     height: 24vh;
     margin-top: 4rem;
     padding: 10px;
