--- a/Auth/signup/signup.css
+++ b/Auth/signup/signup.css
@@ -47,6 +47,8 @@ body {
     margin: 0;
     padding: 0;
     font-family: var(--open-sans);
+    width: 100%;
+    max-width: 100%;
 }
 
 /*Header*/
@@ -55,6 +57,7 @@ header {
     background-color: var(--header-background-color);
     padding: 10px;
     width: 100%;
+    max-width: 100%;
 }
 header h1 {
     margin-top: 1.2vh;
@@ -125,6 +128,7 @@ footer {
     display: inline-flex;
     margin-bottom: 0%;
     width: 100%;
+    max-width: 100%;
     height: 24vh;
     margin-top: 4rem;
     padding: 10px;
