--- a/Public/CSS/index.css
+++ b/Public/CSS/index.css
@@ -49,6 +49,7 @@ body {
     margin: 0;
     padding: 0;
     font-family: var(--open-sans);
+    max-width: 100%;
 }
     /*Header*/
     header {
@@ -56,6 +57,7 @@ body {
         background-color: var(--header-background-color);
         padding: 10px;
         width: 100%;
+        max-width: 100%;
     }
     header h1 {
         margin-top: 1.2vh;
@@ -105,7 +107,7 @@ main {
         line-height: 30px;
     }
     .first-article {
-        background-image: url("/WebChat/Public/IMAGES/Static Images/Image-1.png");
+        background-image: url("/Public/IMAGES/Static Images/Image-1.png");
         background-size: contain;
         background-repeat: no-repeat;
         background-position: right;
@@ -126,14 +128,14 @@ main {
         margin-right: 6vh;
     }
     #secondaryBackground {
-        background-image: url("/WebChat/Public/IMAGES/Static Images/Express.jpeg");
+        background-image: url("/Public/IMAGES/Static Images/Express.jpeg");
         background-size: 210px;
         background-repeat: no-repeat;
         background-position-x: center;
         background-position-y: 13rem;
     }
     #terciaryBackground {
-        background-image: url("/WebChat/Public/IMAGES/Static Images/TalkWithLibert.jpeg");
+        background-image: url("/Public/IMAGES/Static Images/TalkWithLibert.jpeg");
         background-size: 210px;
         background-repeat: no-repeat;
         background-position-x: center;
@@ -152,7 +154,7 @@ main {
     }
     
     #cuarterBackground {
-        background-image: url("/WebChat/Public/IMAGES/Static Images/ConnectWithAll.jpeg");
+        background-image: url("/Public/IMAGES/Static Images/ConnectWithAll.jpeg");
         background-size: 210px;
         background-repeat: no-repeat;
         background-position-x: center;
@@ -170,7 +172,7 @@ main {
         margin-top: 5rem;
     }
     .second-article {
-        background-image: url("/WebChat/Public/IMAGES/Static Images/No-Ads.jpeg");
+        background-image: url("/Public/IMAGES/Static Images/No-Ads.jpeg");
         background-size: contain;
         background-repeat: no-repeat;
         background-position: right;
@@ -181,6 +183,7 @@ footer {
     display: inline-flex;
     margin-bottom: 0%;
     width: 100%;
+    max-width: 100%;
     height: 24vh;
     margin-top: 4rem;
     padding: 10px;
